--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Inter;
+    font-family: Atkinson Hyperlegible;
 }
 
 body {
@@ -15,6 +15,7 @@ h1 {
     width: 50vw;
     letter-spacing: -0.03em;
     line-height: 1.4;
+    font-weight: 400;
 }
 
 @media screen and (max-width: 600px) {
