--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ header {
     grid-row: 5 / 11;
     background-image: url("/image/cover_small/xxpie.png");
     background-size: cover;
-    background-position: left center;
+    background-position: center;
 }
 
 .title-xxpie {
@@ -192,4 +192,305 @@ h1 {
 
 .link-profile:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 1112px) {
+    main {
+        gap: 15px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(15, 80px);
+        max-width: 1000px;
+        padding: 60px;
+    }
+
+    header {
+        grid-column: 1 / 3;
+        grid-row: 1 / 3;
+    }
+
+    h1 {
+        font-size: 22px;
+        line-height: 25px;
+        letter-spacing: -0.8px;
+    }
+    
+    .link-profile {
+        font-size: 16px;
+        line-height: 16px;
+        letter-spacing: -0.4px;
+        color: #166ced;
+        margin-top: 29px;
+        display: inline-block;
+        text-decoration: none;
+    }
+    
+    .link-profile::after {
+        content: url("/image/icon/chevron_right.svg");
+        position: relative;
+        top: 4px;
+        left: 2px;
+    }
+
+    .self-introduction {
+        grid-column: 3 / 7;
+        grid-row: 1 / 2;
+        font-size: 21px;
+        line-height: 28px;
+        letter-spacing: -0.5px;
+        margin: 0px;
+    }
+    
+    .current-state {
+        grid-column: 3 / 7;
+        grid-row: 2 / 3;
+        font-size: 21px;
+        line-height: 28px;
+        letter-spacing: -0.5px;
+        margin: 0px;
+        position: relative;
+        top: 40px;
+    }
+
+    .selected-works {
+        grid-column: 1 / 7;
+        grid-row: 3 / 4;
+        font-size: 16px;
+        line-height: 16px;
+        font-weight: normal;
+        color: #545454;
+        letter-spacing: -0.1px;
+        margin: 0px;
+        align-self: end;
+        position: relative;
+        bottom: 0px;
+    }
+
+    .link-product-tour {
+        grid-column: 1 / 7;
+        grid-row: 4 / 7;
+    }
+    
+    .title-product-tour {
+        grid-column: 1 / 7;
+        grid-row: 7 / 8;
+    }
+    
+    .link-diagram-library {
+        grid-column: 1 / 4;
+        grid-row: 8 / 10;
+        background-image: url("/image/cover_small/diagram_library.png");
+        background-size: cover;
+        background-position: center;
+        border: 1px solid #ffffff;
+    }
+    
+    .title-diagram-library {
+        grid-column: 1 / 4;
+        grid-row: 10 / 11;
+    }
+    
+    .link-yunify-glyph {
+        grid-column: 1 / 4;
+        grid-row: 11 / 13;
+        background-image: url("/image/cover_small/yunify-glyph.png");
+        background-size: cover;
+        background-position: center;
+    }
+    
+    .title-yunify-glyph {
+        grid-column: 1 / 4;
+        grid-row: 13 / 14;
+    }
+    
+    .link-xxpie {
+        grid-column: 4 / 7;
+        grid-row: 8 / 13;
+        background-image: url("/image/cover_small/xxpie.png");
+        background-size: cover;
+        background-position: center;
+    }
+    
+    .title-xxpie {
+        grid-column: 4 / 7;
+        grid-row: 13 / 14;
+    }
+
+    .seperator {
+        grid-column: 1 / 7;
+        grid-row: 14 / 15;
+        border-bottom: 1px solid #c6c6c6;
+    }
+
+    footer {
+        grid-column: 1 / 7;
+        grid-row: 15 / 16;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        position: relative;
+        top: 14px;
+    }
+
+    .card {
+        border-radius: 16px;
+    }
+
+    .card-title {
+        font-size: 16px;
+        line-height: 22px;
+        letter-spacing: -0.1px;
+    }
+}
+
+@media (max-width: 768px) {
+    main {
+        gap: 10px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(13, 80px);
+        max-width: 708px;
+        padding: 30px;
+    }
+
+    header {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    h1 {
+        font-size: 22px;
+        line-height: 25px;
+        letter-spacing: -0.8px;
+        display: inline;
+    }
+    
+    .link-profile {
+        font-size: 16px;
+        line-height: 16px;
+        letter-spacing: -0.4px;
+        color: #166ced;
+        text-decoration: none;
+        display: inline;
+        margin-top: 0px;
+    }
+    
+    .link-profile::after {
+        content: url("/image/icon/chevron_right.svg");
+        position: relative;
+        top: 4px;
+        left: 2px;
+    }
+
+    .self-introduction {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+        font-size: 18px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .current-state {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+        font-size: 18px;
+        line-height: 24px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+        position: relative;
+        top: 40px;
+    }
+
+    .selected-works {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+        font-size: 16px;
+        line-height: 16px;
+        font-weight: normal;
+        color: #545454;
+        letter-spacing: -0.1px;
+        margin: 0px;
+        align-self: end;
+        position: relative;
+        bottom: 0px;
+    }
+
+    .link-product-tour {
+        grid-column: 1 / 3;
+        grid-row: 5 / 7;
+    }
+    
+    .title-product-tour {
+        grid-column: 1 / 3;
+        grid-row: 7 / 8;
+    }
+    
+    .link-diagram-library {
+        grid-column: 1 / 2;
+        grid-row: 8 / 9;
+        background-image: url("/image/cover_small/diagram_library.png");
+        background-size: cover;
+        background-position: center;
+        border: 1px solid #ffffff;
+    }
+    
+    .title-diagram-library {
+        grid-column: 1 / 2;
+        grid-row: 9 / 10;
+    }
+    
+    .link-yunify-glyph {
+        grid-column: 1 / 2;
+        grid-row: 10 / 11;
+        background-image: url("/image/cover_small/yunify-glyph.png");
+        background-size: cover;
+        background-position: center;
+    }
+    
+    .title-yunify-glyph {
+        grid-column: 1 / 2;
+        grid-row: 11 / 12;
+    }
+    
+    .link-xxpie {
+        grid-column: 2 / 3;
+        grid-row: 8 / 11;
+        background-image: url("/image/cover_small/xxpie.png");
+        background-size: cover;
+        background-position: center;
+    }
+    
+    .title-xxpie {
+        grid-column: 2 / 3;
+        grid-row: 11 / 12;
+    }
+
+    .seperator {
+        grid-column: 1 / 3;
+        grid-row: 12 / 13;
+        border-bottom: 1px solid #c6c6c6;
+    }
+
+    footer {
+        grid-column: 1 / 3;
+        grid-row: 13 / 14;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        position: relative;
+        top: 14px;
+    }
+
+    .card {
+        border-radius: 12px;
+    }
+
+    .card-title {
+        font-size: 13px;
+        line-height: 16px;
+        letter-spacing: -0.1px;
+    }
 }
