--- a/style.css
+++ b/style.css
@@ -201,10 +201,152 @@ h1 {
 
 @media (max-width: 1112px) {
     main {
+        gap: 17px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(17, 80px);
+        padding: 70px;
+    }
+
+    header {
+        grid-column: 1 / 3;
+        grid-row: 1 / 3;
+    }
+
+    h1 {
+        font-size: 32px;
+        line-height: 32px;
+        letter-spacing: -1.5px;
+    }
+    
+    .link-profile {
+        font-size: 23px;
+        line-height: 23px;
+        letter-spacing: -0.8px;
+        color: #166ced;
+        margin-top: 38px;
+        display: inline-block;
+        text-decoration: none;
+    }
+    
+    .link-profile::after {
+        content: "";
+        display: inline-block;
+        height: 23px;
+        width: 14px;
+        background-size: 14px 23px;
+        background-image: url("/image/icon/chevron_right.svg");
+        position: relative;
+        top: 4px;
+        left: 1px;
+    }
+
+    .self-introduction {
+        grid-column: 3 / 7;
+        grid-row: 1 / 2;
+        font-size: 23px;
+        line-height: 31px;
+        letter-spacing: -0.8px;
+        margin: 0px;
+    }
+    
+    .current-state {
+        grid-column: 3 / 7;
+        grid-row: 2 / 3;
+        font-size: 23px;
+        line-height: 31px;
+        letter-spacing: -0.8px;
+        margin: 0px;
+        position: relative;
+        top: 31px;
+    }
+
+    .selected-works {
+        grid-column: 1 / 7;
+        grid-row: 3 / 4;
+        font-size: 18px;
+        line-height: 18px;
+        font-weight: normal;
+        color: #545454;
+        letter-spacing: -0.1px;
+        margin: 0px;
+        align-self: end;
+        position: relative;
+        bottom: 0px;
+    }
+
+    .link-product-tour {
+        grid-column: 1 / 7;
+        grid-row: 4 / 7;
+    }
+    
+    .title-product-tour {
+        grid-column: 1 / 7;
+        grid-row: 7 / 8;
+    }
+    
+    .link-diagram-library {
+        grid-column: 1 / 4;
+        grid-row: 8 / 11;
+    }
+    
+    .title-diagram-library {
+        grid-column: 1 / 4;
+        grid-row: 11 / 12;
+    }
+    
+    .link-yunify-glyph {
+        grid-column: 1 / 4;
+        grid-row: 12 / 15;
+    }
+    
+    .title-yunify-glyph {
+        grid-column: 1 / 4;
+        grid-row: 15 / 16;
+    }
+    
+    .link-xxpie {
+        grid-column: 4 / 7;
+        grid-row: 8 / 15;
+    }
+    
+    .title-xxpie {
+        grid-column: 4 / 7;
+        grid-row: 15 / 16;
+    }
+
+    .seperator {
+        grid-column: 1 / 7;
+        grid-row: 16 / 17;
+        border-bottom: 1px solid #c6c6c6;
+    }
+
+    footer {
+        grid-column: 1 / 7;
+        grid-row: 17 / 18;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        position: relative;
+        top: 14px;
+    }
+
+    .card {
+        border-radius: 16px;
+    }
+
+    .card-title {
+        font-size: 18px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
+    }
+}
+
+@media (max-width: 890px) {
+    main {
         gap: 15px;
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(15, 80px);
-        max-width: 1000px;
         padding: 60px;
     }
 
@@ -214,17 +356,17 @@ h1 {
     }
 
     h1 {
-        font-size: 22px;
-        line-height: 25px;
+        font-size: 23px;
+        line-height: 23px;
         letter-spacing: -0.8px;
     }
     
     .link-profile {
-        font-size: 16px;
-        line-height: 16px;
-        letter-spacing: -0.4px;
+        font-size: 21px;
+        line-height: 21px;
+        letter-spacing: -0.5px;
         color: #166ced;
-        margin-top: 29px;
+        margin-top: 36px;
         display: inline-block;
         text-decoration: none;
     }
@@ -232,12 +374,12 @@ h1 {
     .link-profile::after {
         content: "";
         display: inline-block;
-        height: 16px;
-        width: 10px;
-        background-size: 10px 16px;
+        height: 21px;
+        width: 13px;
+        background-size: 13px 21px;
         background-image: url("/image/icon/chevron_right.svg");
         position: relative;
-        top: 2.5px;
+        top: 3.5px;
         left: 1px;
     }
 
@@ -345,6 +487,154 @@ h1 {
 
 @media (max-width: 768px) {
     main {
+        gap: 12px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(15, 80px);
+        padding: 45px;
+    }
+
+    header {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    h1 {
+        font-size: 23px;
+        line-height: 23px;
+        letter-spacing: -0.8px;
+        display: inline;
+    }
+    
+    .link-profile {
+        font-size: 19px;
+        line-height: 19px;
+        letter-spacing: -0.4px;
+        color: #166ced;
+        text-decoration: none;
+        display: inline;
+        margin-top: 0px;
+        position: relative;
+        top: 3px;
+    }
+    
+    .link-profile::after {
+        content: "";
+        display: inline-block;
+        height: 19px;
+        width: 12px;
+        background-size: 12px 19px;
+        background-image: url("/image/icon/chevron_right.svg");
+        position: relative;
+        top: 3.2px;
+        left: 1px;
+    }
+
+    .self-introduction {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+        font-size: 19px;
+        line-height: 25px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+    }
+    
+    .current-state {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+        font-size: 19px;
+        line-height: 25px;
+        letter-spacing: -0.1px;
+        margin: 0px;
+        position: relative;
+        top: 40px;
+    }
+
+    .selected-works {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+        font-size: 14px;
+        line-height: 14px;
+        font-weight: normal;
+        color: #545454;
+        letter-spacing: 0px;
+        margin: 0px;
+        align-self: end;
+        position: relative;
+        bottom: 0px;
+    }
+
+    .link-product-tour {
+        grid-column: 1 / 3;
+        grid-row: 5 / 7;
+    }
+    
+    .title-product-tour {
+        grid-column: 1 / 3;
+        grid-row: 7 / 8;
+    }
+    
+    .link-diagram-library {
+        grid-column: 1 / 2;
+        grid-row: 8 / 10;
+    }
+    
+    .title-diagram-library {
+        grid-column: 1 / 2;
+        grid-row: 10 / 11;
+    }
+    
+    .link-yunify-glyph {
+        grid-column: 1 / 2;
+        grid-row: 11 / 13;
+    }
+    
+    .title-yunify-glyph {
+        grid-column: 1 / 2;
+        grid-row: 13 / 14;
+    }
+    
+    .link-xxpie {
+        grid-column: 2 / 3;
+        grid-row: 8 / 13;
+    }
+    
+    .title-xxpie {
+        grid-column: 2 / 3;
+        grid-row: 13 / 14;
+    }
+
+    .seperator {
+        grid-column: 1 / 3;
+        grid-row: 14 / 15;
+        border-bottom: 1px solid #c6c6c6;
+    }
+
+    footer {
+        grid-column: 1 / 3;
+        grid-row: 15 / 16;
+        font-size: 11px;
+        line-height: 15px;
+        letter-spacing: 0.1px;
+        color: #8d8d8d;
+        position: relative;
+        top: 14px;
+    }
+
+    .card {
+        border-radius: 12px;
+    }
+
+    .card-title {
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: -0.1px;
+    }
+}
+
+@media (max-width: 560px) {
+    main {
         gap: 10px;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(13, 80px);
@@ -360,31 +650,33 @@ h1 {
     }
 
     h1 {
-        font-size: 22px;
-        line-height: 25px;
-        letter-spacing: -0.8px;
+        font-size: 18px;
+        line-height: 18px;
+        letter-spacing: -0.5px;
         display: inline;
     }
     
     .link-profile {
-        font-size: 16px;
-        line-height: 16px;
-        letter-spacing: -0.4px;
+        font-size: 18px;
+        line-height: 18px;
+        letter-spacing: -0.1px;
         color: #166ced;
         text-decoration: none;
         display: inline;
         margin-top: 0px;
+        position: relative;
+        top: 0px;
     }
     
     .link-profile::after {
         content: "";
         display: inline-block;
-        height: 15px;
-        width: 9px;
-        background-size: 9px 15px;
+        height: 18px;
+        width: 11px;
+        background-size: 11px 18px;
         background-image: url("/image/icon/chevron_right.svg");
         position: relative;
-        top: 2.2px;
+        top: 3x;
         left: 0.7px;
     }
 
@@ -395,6 +687,8 @@ h1 {
         line-height: 24px;
         letter-spacing: -0.1px;
         margin: 0px;
+        position: relative;
+        top: -29px;
     }
     
     .current-state {
@@ -405,14 +699,14 @@ h1 {
         letter-spacing: -0.1px;
         margin: 0px;
         position: relative;
-        top: 40px;
+        top: 35px;
     }
 
     .selected-works {
         grid-column: 1 / 3;
         grid-row: 4 / 5;
-        font-size: 16px;
-        line-height: 16px;
+        font-size: 13px;
+        line-height: 13px;
         font-weight: normal;
         color: #545454;
         letter-spacing: -0.1px;
