--- a/style.css
+++ b/style.css
@@ -666,6 +666,7 @@ h1 {
         margin-top: 0px;
         position: relative;
         top: -2px;
+        height: 18px;
     }
     
     .link-profile::after {
