--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ main {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(13, 80px);
+    grid-template-rows: repeat(12, 80px);
     max-width: 1120px;
     padding: 80px;
     background-color: #f5f5f5;
@@ -144,21 +144,18 @@ header {
     transform: scale(1.01);
 }
 
-.seperator {
-    grid-column: span 12;
-    grid-row: span 1;
-    border-bottom: 1px solid #c6c6c6;
-}
-
 footer {
-    grid-column: span 12;
-    grid-row: span 1;
+    grid-column: 1 / 13;
+    grid-row: 12 / 13;
     font-size: 11px;
     line-height: 15px;
     letter-spacing: 0.1px;
     color: #8d8d8d;
     position: relative;
     top: 14px;
+    border-top: 1px solid #c6c6c6;
+    padding-top: 16px;
+    align-self: end;
 }
 
 p {
@@ -203,7 +200,7 @@ h1 {
     main {
         gap: 17px;
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(17, 80px);
+        grid-template-rows: repeat(16, 80px);
         padding: 70px;
     }
 
@@ -312,23 +309,20 @@ h1 {
     .title-xxpie {
         grid-column: 4 / 7;
         grid-row: 15 / 16;
-    }
-
-    .seperator {
-        grid-column: 1 / 7;
-        grid-row: 16 / 17;
-        border-bottom: 1px solid #c6c6c6;
-    }
+    }        
 
     footer {
         grid-column: 1 / 7;
-        grid-row: 17 / 18;
+        grid-row: 16 / 17;
         font-size: 11px;
         line-height: 15px;
         letter-spacing: 0.1px;
         color: #8d8d8d;
         position: relative;
         top: 14px;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
     }
 
     .card {
@@ -346,7 +340,7 @@ h1 {
     main {
         gap: 15px;
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(15, 80px);
+        grid-template-rows: repeat(14, 80px);
         padding: 60px;
     }
 
@@ -457,21 +451,18 @@ h1 {
         grid-row: 13 / 14;
     }
 
-    .seperator {
-        grid-column: 1 / 7;
-        grid-row: 14 / 15;
-        border-bottom: 1px solid #c6c6c6;
-    }
-
     footer {
         grid-column: 1 / 7;
-        grid-row: 15 / 16;
+        grid-row: 14 / 15;
         font-size: 11px;
         line-height: 15px;
         letter-spacing: 0.1px;
         color: #8d8d8d;
         position: relative;
         top: 14px;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
     }
 
     .card {
@@ -489,7 +480,7 @@ h1 {
     main {
         gap: 12px;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(15, 80px);
+        grid-template-rows: repeat(14, 80px);
         padding: 45px;
     }
 
@@ -605,21 +596,18 @@ h1 {
         grid-row: 13 / 14;
     }
 
-    .seperator {
-        grid-column: 1 / 3;
-        grid-row: 14 / 15;
-        border-bottom: 1px solid #c6c6c6;
-    }
-
     footer {
         grid-column: 1 / 3;
-        grid-row: 15 / 16;
+        grid-row: 14 / 15;
         font-size: 11px;
         line-height: 15px;
         letter-spacing: 0.1px;
         color: #8d8d8d;
         position: relative;
         top: 14px;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
     }
 
     .card {
@@ -637,7 +625,7 @@ h1 {
     main {
         gap: 10px;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(13, 80px);
+        grid-template-rows: repeat(12, 80px);
         max-width: 708px;
         padding: 30px;
     }
@@ -757,21 +745,18 @@ h1 {
         grid-row: 11 / 12;
     }
 
-    .seperator {
-        grid-column: 1 / 3;
-        grid-row: 12 / 13;
-        border-bottom: 1px solid #c6c6c6;
-    }
-
     footer {
         grid-column: 1 / 3;
-        grid-row: 13 / 14;
+        grid-row: 12 / 13;
         font-size: 11px;
         line-height: 15px;
         letter-spacing: 0.1px;
         color: #8d8d8d;
         position: relative;
         top: 14px;
+        border-top: 1px solid #c6c6c6;
+        padding-top: 16px;
+        align-self: end;
     }
 
     .card {
