Update contact text on mobile screen

--- a/profile/style.css
+++ b/profile/style.css
@@ -561,6 +561,8 @@ li:not(:last-child) {
 
     .contact {
         margin-top: 16px;
+        text-decoration: none;
+        color: #000000;
     }
 
     h2 {
