--- a/profile/style.css
+++ b/profile/style.css
@@ -403,8 +403,8 @@ li:not(:last-child) {
     aside {
         grid-column: 1 / 3;
         border-bottom: 1px solid #c6c6c6;
-        padding-bottom: 32px;
-        margin-bottom: 18px;
+        padding-bottom: 43px;
+        margin-bottom: 40px;
     }
     
     article {
@@ -412,7 +412,7 @@ li:not(:last-child) {
     }
 
     .portrait {
-        width: 78px;
+        width: 89px;
         float: right;
     }
 
@@ -424,24 +424,19 @@ li:not(:last-child) {
     }
 
     .body-text {
-        font-size: 14px;
-        line-height: 22px;
-        letter-spacing: 0px;
-    }
-
-    .language-text {
-        margin-top: 9px;
-        margin-bottom: 0px;
+        font-size: 15px;
+        line-height: 23px;
+        letter-spacing: -0.1px;
     }
 
     .contact {
-        margin-top: 18px;
+        margin-top: 28px;
     }
 
     h2 {
-        font-size: 14px;
-        line-height: 14px;
-        letter-spacing: 0px;
+        font-size: 15px;
+        line-height: 15px;
+        letter-spacing: -0.1px;
     }
 
     button {
@@ -477,43 +472,44 @@ li:not(:last-child) {
     }
 
     h3 {
-        font-size: 14px;
-        line-height: 14px;
-        letter-spacing: 0px;
+        font-size: 15px;
+        line-height: 15px;
+        letter-spacing: -0.1px;
     }
 
     .experience-title {
-        margin-top: 22px;
+        margin-top: 24px;
     }
 
     .time {
-        font-size: 14px;
-        line-height: 14px;
-        letter-spacing: 0px;
+        font-size: 15px;
+        line-height: 15px;
+        letter-spacing: -0.1px;
         margin-top: 10px;
     }
 
     ul {
         right: 23px;
-        margin-top: 13px;
+        margin-top: 16px;
+        width: 95%;
     }
     
     li:not(:last-child) {
-        margin-bottom: 3px;
+        margin-bottom: 7px;
     }
     
     #education {
-        margin-top: 32px;
+        margin-top: 36px;
     }
     
     .education-title {
-        margin-top: 22px;
+        margin-top: 24px;
     }
     
     .program-name {
-        font-size: 14px;
-        line-height: 14px;
-        margin-top: 10px;
+        font-size: 15px;
+        line-height: 23px;
+        margin-top: 7px;
     }
 }
 
