--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -127,6 +127,10 @@ p {
     text-decoration: none;
 }
 
+.link:hover {
+    text-decoration: underline;
+}
+
 .quick-link-item:not(:last-child) {
     margin-bottom: 16px;
 }
@@ -181,6 +185,9 @@ p {
     border: 1px solid #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 6px 26px rgba(0, 0, 0, 0.14);
     z-index: 1;
+    overflow: hidden;
+    border-radius: 8px;
+    -webkit-transform: translateZ(0);
 }
 
 .product-tour-video {
@@ -211,8 +218,105 @@ p {
     border: 1px solid #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 6px 26px rgba(0, 0, 0, 0.14);
     z-index: 2;
+    overflow: hidden;
+    border-radius: 8px;
+    -webkit-transform: translateZ(0);
 }
 
 .smartx-community-video {
     width: 100%;
+}
+
+.s-3 {
+    grid-column: 1 / 13;
+    grid-row: 41 / 42;
+}
+
+.st-2 {
+    grid-column: 1 / 3;
+    grid-row: 42 / 43;
+}
+
+.process-title-1 {
+    grid-column: 2 / 12;
+    grid-row: 43 / 44;
+}
+
+.subtitle {
+    font-size: 24px;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    margin: 0px;
+}
+
+.process-title-text {
+    font-size: 40px;
+    line-height: 40px;
+    letter-spacing: -1px;
+    margin-top: 15px;
+}
+
+.fp-4 {
+    grid-column: 2 / 12;
+    grid-row: 44 / 46;
+}
+
+.visualize-goal {
+    grid-column: 2 / 12;
+    grid-row: 46 / 51;
+    width: 100%;
+}
+
+.initial-goals {
+    grid-column: 2 / 7;
+    grid-row: 51 / 53;
+    width: 80%;
+}
+
+.fp-4 {
+    margin-top: 12px;
+}
+
+.goal-list {
+    grid-column: 7 / 12;
+    grid-row: 51 / 55;
+    margin: 0px;
+    padding: 0px;
+}
+
+.goal-list-item:not(:last-child) {
+    margin-bottom: 9px;
+}
+
+.process-title-2 {
+    grid-column: 2 / 12;
+    grid-row: 56 / 57;
+}
+
+.fp-5 {
+    grid-column: 2 / 12;
+    grid-row: 57 / 59;
+}
+
+.video-container-3 {
+    grid-column: 1 / 7;
+    grid-row: 59 / 63;
+    border: 1px solid #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 7px 27px rgba(0, 0, 0, 0.14);
+    overflow: hidden;
+    border-radius: 8px;
+    -webkit-transform: translateZ(0);
+}
+
+.original-prototype-video {
+    width: 100%;
+}
+
+.original-prototype-2 {
+    grid-column: 7 / 13;
+    grid-row: 59 / 63;
+    width: 100%;
+    border: 1px solid #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 7px 27px rgba(0, 0, 0, 0.14);
+    border-radius: 8px;
 }
