--- a/style.css
+++ b/style.css
@@ -769,6 +769,18 @@ h1 {
     }
 }
 
+@media (max-width: 395px) {
+    .self-introduction {
+        position: relative;
+        top: -29px;
+    }
+    
+    .current-state {
+        position: relative;
+        top: 20px;
+    }
+}
+
 @media (max-width: 385px) {
     .self-introduction {
         position: relative;
