--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -181,7 +181,19 @@ p {
 
 .video-container-1 {
     grid-column: 1 / 9;
-    grid-row: 28 / 35;
+    grid-row: 28 / 36;
+}
+
+.position-box-1 {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+}
+
+.position-container-1 {
+    position: absolute;
+    width: 100%;
+    height: 92%;
     border: 1px solid #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 6px 26px rgba(0, 0, 0, 0.14);
     z-index: 1;
@@ -214,7 +226,19 @@ p {
 
 .video-container-2 {
     grid-column: 5 / 13;
-    grid-row: 34 / 41;
+    grid-row: 34 / 42;
+}
+
+.position-box-2 {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+}
+
+.position-container-2 {
+    position: absolute;
+    width: 100%;
+    height: 92%;
     border: 1px solid #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 6px 26px rgba(0, 0, 0, 0.14);
     z-index: 2;
@@ -263,8 +287,9 @@ p {
 
 .visualize-goal {
     grid-column: 2 / 12;
-    grid-row: 46 / 51;
+    grid-row: 46 / 50;
     width: 100%;
+    align-self: center;
 }
 
 .initial-goals {
@@ -290,17 +315,30 @@ p {
 
 .process-title-2 {
     grid-column: 2 / 12;
-    grid-row: 56 / 57;
+    grid-row: 57 / 58;
 }
 
 .fp-5 {
     grid-column: 2 / 12;
-    grid-row: 57 / 59;
+    grid-row: 58 / 60;
 }
 
 .video-container-3 {
     grid-column: 1 / 7;
-    grid-row: 59 / 63;
+    grid-row: 60 / 65;
+    
+}
+
+.position-box-3 {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+}
+
+.position-container-3 {
+    position: absolute;
+    width: 100%;
+    height: 71%;
     border: 1px solid #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 7px 27px rgba(0, 0, 0, 0.14);
     overflow: hidden;
@@ -312,11 +350,28 @@ p {
     width: 100%;
 }
 
-.original-prototype-2 {
+.image-container-1 {
     grid-column: 7 / 13;
-    grid-row: 59 / 63;
+    grid-row: 60 / 65;
+    
+}
+
+.position-box-4 {
+    position: relative;
     width: 100%;
+    padding-bottom: 100%;
+}
+
+.position-container-4 {
+    position: absolute;
+    width: 100%;
+    height: 71%;
     border: 1px solid #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 7px 27px rgba(0, 0, 0, 0.14);
     border-radius: 8px;
+    overflow: hidden;
+}
+
+.original-prototype-2 {
+    width: 100%;
 }
