--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 * {
     font-family: "Civil Premium";
     -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
