--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -39,7 +39,7 @@ header {
     justify-self: center;
 }
 
-img {
+.header-image {
     max-width: 1280px;
 }
 
@@ -353,7 +353,6 @@ p {
 .image-container-1 {
     grid-column: 7 / 13;
     grid-row: 60 / 65;
-    
 }
 
 .position-box-4 {
@@ -374,4 +373,274 @@ p {
 
 .original-prototype-2 {
     width: 100%;
+}
+
+.fp-6 {
+    grid-column: 3 / 11;
+    grid-row: 65 / 66;
+}
+
+.video-container-4 {
+    grid-column: 3 / 11;
+    grid-row: 66 / 72;
+}
+
+.position-box-5 {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+}
+
+.position-container-5 {
+    position: absolute;
+    width: 100%;
+    height: 71.2%;
+    border: 1px solid #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04), 0px 7px 27px rgba(0, 0, 0, 0.14);
+    overflow: hidden;
+    border-radius: 8px;
+    -webkit-transform: translateZ(0);
+}
+
+.original-prototype-decision {
+    width: 100%;
+}
+
+.process-title-3 {
+    grid-column: 2 / 12;
+    grid-row: 73 / 74;
+}
+
+.fp-7 {
+    grid-column: 2 / 12;
+    grid-row: 74 / 75;
+}
+
+.varients-of-landing-page {
+    grid-column: 1 / 13;
+    grid-row: 76 / 81;
+    width: 100%;
+}
+
+.process-title-4 {
+    grid-column: 2 / 12;
+    grid-row: 82 / 83;
+}
+
+.fp-8 {
+    grid-column: 2 / 12;
+    grid-row: 83 / 84;
+}
+
+.detailed-work {
+    grid-column: 1 / 13;
+    grid-row: 85 / 91;
+    width: 100%;
+}
+
+.little-detail-1 {
+    grid-column: 1 / 7;
+    grid-row: 92 / 98;
+    width: 100%;
+}
+
+.line {
+    height: 1px;
+    width: 100%;
+    border: 1px solid #ffffff;
+    background-color: #7d7d7d;
+}
+
+.l-1 {
+    grid-column: 4 / 8;
+    grid-row: 93 / 94;
+    justify-self: right;
+    width: 79%;
+}
+
+.detail-description-1 {
+    grid-column: 8 / 13;
+    grid-row: 93 / 95;
+    position: relative;
+    top: -11px;
+}
+
+.fp-9 {
+    margin-top: 12px;
+}
+
+.little-detail-1-2 {
+    grid-column: 8 / 13;
+    grid-row: 95 / 98;
+    width: 100%;
+    align-self: end;
+}
+
+.process-title-5 {
+    grid-column: 2 / 12;
+    grid-row: 99 / 100;
+}
+
+.fp-10 {
+    grid-column: 2 / 12;
+    grid-row: 100 / 101;
+}
+
+.covers-video {
+    grid-column: 1 / 13;
+    grid-row: 102 / 107;
+    width: 100%;
+}
+
+.s-4 {
+    grid-column: 1 / 13;
+    grid-row: 107 / 108;
+}
+
+.st-3 {
+    grid-column: 1 / 13;
+    grid-row: 108 / 109;
+}
+
+.process-title-6 {
+    grid-column: 2 / 12;
+    grid-row: 109 / 110;
+}
+
+.fp-11 {
+    grid-column: 2 / 12;
+    grid-row: 110 / 111;
+}
+
+.flow-container {
+    grid-column: 1 / 13;
+    grid-row: 112 / 117;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    background-color: #e5e5e5;
+}
+
+.flow-container::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+.flow-container::-webkit-scrollbar:horizontal {
+    height: 28px;
+}
+
+.flow-container::-webkit-scrollbar-thumb {
+    border-radius: 14px;
+    border: 10px solid #e5e5e5;
+    background-color: rgba(0, 0, 0, .29);
+}
+
+.flow {
+    height: 100%;
+}
+
+.detail-description-2 {
+    grid-column: 2 / 6;
+    grid-row: 121 / 122;
+    position: relative;
+    top: -39px;
+}
+
+.fp-12 {
+    margin-top: 12px;
+}
+
+.l-2 {
+    grid-column: 3 / 8;
+    grid-row: 120 / 121;
+    align-self: end;
+    z-index: 2;
+    width: 79%;
+    justify-self: center;
+    position: relative;
+    left: -6px;
+    bottom: 7px;
+}
+
+.package-sent {
+    grid-column: 7 / 12;
+    grid-row: 118 / 123;
+    max-width: 424px;
+    box-shadow: 0px 7px 17px rgba(0, 0, 0, 0.19), 0px 25px 80px rgba(0, 0, 0, 0.27);
+    border-radius: 8px;
+    z-index: 1;
+}
+
+.all-community-works {
+    grid-column: 1 / 13;
+    grid-row: 124 / 129;
+    width: 100%;
+}
+
+.s-5 {
+    grid-column: 1 / 13;
+    grid-row: 129 / 130;
+}
+
+.st-4 {
+    grid-column: 1 / 3;
+    grid-row: 130 / 131;
+}
+
+.fp-13 {
+    grid-column: 2 / 12;
+    grid-row: 131 / 132;
+}
+
+.owc-1 {
+    grid-column: 1 / 5;
+    grid-row: 133 / 137;
+    background-image: url(/product-tour-and-smartx-community/image/other-works-1.png);
+}
+
+.owc-2 {
+    grid-column: 5 / 9;
+    grid-row: 133 / 137;
+    background-image: url(/product-tour-and-smartx-community/image/other-works-2.png);
+}
+
+.owc-3 {
+    grid-column: 9 / 13;
+    grid-row: 133 / 137;
+    background-image: url(/product-tour-and-smartx-community/image/other-works-3.png);
+}
+
+.owc-4 {
+    grid-column: 1 / 5;
+    grid-row: 137 / 141;
+    background-image: url(/product-tour-and-smartx-community/image/other-works-4.png);
+}
+
+.owc-5 {
+    grid-column: 5 / 9;
+    grid-row: 137 / 141;
+    background-image: url(/product-tour-and-smartx-community/image/other-works-5.png);
+}
+
+.owc-6 {
+    grid-column: 9 / 13;
+    grid-row: 137 / 141;
+    background-image: url(/product-tour-and-smartx-community/image/other-works-6.png);
+}
+
+.other-works-container {
+    background-size: cover;
+    background-color: #000000;
+    background-position: center;
+}
+
+footer {
+    grid-column: 1 / 13;
+    grid-row: 141 / 142;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 0.1px;
+    color: #8d8d8d;
+    border-top: 1px solid #c6c6c6;
+    padding-top: 16px;
+    align-self: end;
 }
