--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -33,14 +33,13 @@ main {
 }
 
 header {
-    grid-column: 1 / 13;
-    grid-row: 1 / 5;
-    align-self: end;
-    justify-self: center;
-}
-
-.header-image {
+    background-image: url(/product-tour-and-smartx-community/image/product-tour-and-smartx-community.jpg);
+    background-size: cover;
+    background-position: center;
     max-width: 1280px;
+    width: 100%;
+    height: 460px;
+    position: absolute;
 }
 
 h1 {
@@ -655,14 +654,17 @@ footer {
     }
     
     header {
-        grid-column: 1 / 7;
-        grid-row: 1 / 5;
-        align-self: end;
-        justify-self: center;
+        background-image: url(/product-tour-and-smartx-community/image/product-tour-and-smartx-community.jpg);
+        background-size: cover;
+        background-position: center;
+        max-width: 1280px;
+        width: 100%;
+        height: 441px;
+        position: absolute;
     }
     
     .header-image {
-        max-width: 1280px;
+        max-width: 1112px;
     }
     
     h1 {
