--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -6383,3 +6383,9 @@ footer {
         align-self: end;
     }
 }
+
+@media (hover: none) {
+    .link:hover {
+        text-decoration: none;
+    }
+}
