--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -159,7 +159,7 @@ p {
     border: 1px solid rgba(0, 0, 0, 0.1);
     width: 100%;
     height: 100%;
-    -webkit-overflow-scrolling: touch;
+    -webkit-overflow-scrolling: touch!important;
 }
 
 .paragraph-title {
