--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -122,6 +122,7 @@ h1 {
     grid-column: 3 / 5;
     grid-row: 9 / 11;
     color: #000000;
+    min-width: 185px;
 }
 
 .info-name-item:not(:last-child), .info-content-item:not(:last-child) {
