--- a/diagram-library/style.css
+++ b/diagram-library/style.css
@@ -446,3 +446,38 @@ p {
     width: 100%;
     max-width: 710px;
 }
+
+.shift-to-minimalism {
+    grid-column: 9 / 13;
+    grid-row: 109 / 112;
+    position: relative;
+    top: 20px;
+}
+
+.fp-8 {
+    margin-top: 12px;
+}
+
+.variants-image {
+    grid-column: 1 / 9;
+    grid-row: 115 / 126;
+    width: 100%;
+    max-width: 710px;
+}
+
+.figma-panel {
+    grid-column: 9 / 13;
+    grid-row: 115 / 116;
+    width: 100%;
+}
+
+.variants {
+    grid-column: 9 / 13;
+    grid-row: 117 / 119;
+    position: relative;
+    top: -15px;
+}
+
+.fp-9 {
+    margin-top: 12px;
+}
