--- a/diagram-library/style.css
+++ b/diagram-library/style.css
@@ -32,20 +32,22 @@ main {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(141, 80px);
+    grid-template-rows: repeat(160, 80px);
     max-width: 1120px;
     padding: 80px;
     background-color: #f5f5f5;
 }
 
 header {
-    background-image: url(/diagram-library/image/diagram-library.jpg);
+    background-image: url(/diagram-library/image/diagram-library.png);
     background-size: cover;
     background-position: center;
     max-width: 1280px;
     width: 100%;
     height: 460px;
     position: absolute;
+    border: 1px solid #ffffff;
+    box-sizing: border-box;
 }
 
 .back {
@@ -54,7 +56,7 @@ header {
     position: relative;
     z-index: 3;
     top: 10px;
-    left: 6px;
+    left: 8px;
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -480,4 +482,74 @@ p {
 
 .fp-9 {
     margin-top: 12px;
+}
+
+.software-icons-image {
+    grid-column: 1 / 9;
+    grid-row: 127 / 130;
+    width: 100%;
+    max-width: 710px;
+}
+
+.icons-for-software {
+    grid-column: 9 / 13;
+    grid-row: 127 / 130;
+    position: relative;
+    top: 0px;
+}
+
+.s-4 {
+    grid-column: 1 / 13;
+    grid-row: 131 / 132;
+}
+
+.st-3 {
+    grid-column: 1 / 3;
+    grid-row: 132 / 133;
+}
+
+.diagrams-for-guotai {
+    grid-column: 1 / 9;
+    grid-row: 133 / 149;
+}
+
+.guotai-junan-securities-1 {
+    max-width: 608px;
+    width: 100%;
+    max-height: 100%;
+    height: auto;
+}
+
+.guotai-junan-securities-2 {
+    margin-top: 40px;
+    max-width: 608px;
+    width: 100%;
+    max-height: 100%;
+    height: auto;
+}
+
+.diagrams-for-healthcare-industry-solution {
+    grid-column: 1 / 13;
+    grid-row: 150 / 160;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.healthcare-industry-solution {
+    width: 100%;
+    max-width: 872px;
+}
+
+footer {
+    grid-column: 1 / 13;
+    grid-row: 160 / 161;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 0.1px;
+    color: #8d8d8d;
+    border-top: 1px solid #c6c6c6;
+    padding-top: 16px;
+    align-self: end;
 }
