--- a/product-tour-and-smartx-community/style.css
+++ b/product-tour-and-smartx-community/style.css
@@ -13,7 +13,7 @@
 * {
     font-family: "Civil Premium";
     -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: none;
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
