--- a/diagram-library/style.css
+++ b/diagram-library/style.css
@@ -897,6 +897,7 @@ footer {
         grid-row: 63 / 64;
         position: relative;
         top: -30px;
+        min-width: 562px;
     }
     
     .fp-5 {
@@ -1468,6 +1469,7 @@ footer {
         grid-row: 71 / 72;
         position: relative;
         top: -40px;
+        min-width: none;
     }
     
     .fp-5 {
@@ -2064,7 +2066,8 @@ footer {
         grid-column: 1 / 3;
         grid-row: 60 / 61;
         position: relative;
-        top: 0px; 
+        top: 0px;
+        min-width: none;
     }
     
     .fp-5 {
